test/deriver/errors/unsupported_type_open.expected
File "unsupported_type_open.ml", line 1, characters 0-30:
1 | type t = .. [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: extensible variant types are not Irmin-serialisable.
